# cpp-screencap

./: .gitignore  Makefile  db.cpp  dev.sh  main.cpp  meson.build  run.sh  screencap.cpp
server/: .gitignore  client.sh  dev-client.sh  dev.sh  server.py  server.sh  setup.sh
